# Ohayo

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  build_macos.sh  build_windows.bat  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  requirements.txt  tailwind.config.ts
.github/workflows/: release.yml
scripts/: build_macos.sh  build_windows.bat  ui.py
src/: App.tsx  curl.py  index.css  theme.py  ui.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: collections.rs  config.rs  http_client.rs  lib.rs  main.rs  profiles.rs  scheduler.rs  types.rs
src/components/: CollectionTree.tsx  EnvSelector.tsx  EnvironmentsPage.tsx  LogEntries.tsx  LogHeader.tsx  LogPanel.tsx  LogsPage.tsx  Modal.tsx  ProfileItem.tsx  RequestBar.tsx  RequestTitle.tsx  Sidebar.tsx  StarField.tsx  StatsRow.tsx  StatusDot.tsx  Tabs.tsx  TopNav.tsx
src/components/tabs/: BodyTab.tsx  HeadersTab.tsx  SendModeTab.tsx
src/core/: profiles.py  scheduler.py
src/hooks/: useCollections.ts  useProfiles.ts  useScheduler.ts  useTheme.ts
src/lib/: vars.ts
src/store/: appStore.ts
src/theme/: __init__.py  themes.py  tokens.ts
src/types/: index.ts
src/ui/: main_window.py  widgets.py
